--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,6 +32,12 @@ android {
 
     buildTypes {
         release {
+
+            // Enables code-related app optimization (minification/obfuscation)
+            minifyEnabled true
+
+            // It is also highly recommended to enable resource shrinking
+            shrinkResources true
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
