--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:label="finance_guard"
+        android:label="Finance Guard"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
