--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,5 +43,10 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/app_icon.png"
+
 flutter:
   uses-material-design: true
