--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,20 +9,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.0
 
-  # ✅ Local storage
+  # Local storage
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.4
 
-  # ✅ Date and formatting
+  # Date and formatting
   flutter_datetime_picker_plus: ^2.0.1
   intl: ^0.19.0
 
-  # ✅ Core utilities
+  # Core utilities
   uuid: ^4.4.0
   get_it: ^7.7.0
   flutter_bloc: ^8.1.4
@@ -31,12 +30,11 @@ dependencies:
   dio: ^5.7.0
   percent_indicator: ^4.2.3
 
-
-  # ✅ WebView (обновлённая)
+  # WebView
   webview_flutter: ^4.9.0
 
 dev_dependencies:
-  flutter_launcher_icons:
+  flutter_launcher_icons: ^0.13.1
   hive_generator: ^2.0.1
   build_runner: ^2.4.6
   flutter_test:
@@ -44,7 +42,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter_launcher_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
   image_path: "assets/icon/app_icon.png"
 
